Bug 92241 - Preview is cut off in Symbols dialog
Summary: Preview is cut off in Symbols dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta3
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords: bibisected, bisected, regression
: 92393 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-22 09:24 UTC by Andras Timar
Modified: 2016-10-25 19:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2015-06-22 09:24:28 UTC
Tools - Catalog
In Symbols dialog the preview of the glyph is shifted down, so only the upper part of the glyph is visible.
Comment 1 Andras Timar 2015-06-22 09:26:34 UTC
Bibisected: 2ca7795a6a723c701f295323fcc3f6c52ad37976..158b50763962f66515062300e265839828463efa
Comment 2 Jacques Guilleron 2015-06-22 16:20:33 UTC
Hi Andras,

I confirm with LO 5.0.0.0.beta3 and the next ones, LO 5.0.0.1 and LO 5.1.0.0
& Windows 7 Home Premium
Also with 5.0.0.0.beta1 Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
but not with LO 5.0.0.0.alpha1+ Build ID: 6664859e1e8b3f8b7db8c931b8d0335510c20ce0
TinderBox: Win-x86@42, Branch:master, Time: 2015-05-16_03:16:31 where displaying is correct.

Jacques
Comment 3 Andras Timar 2015-06-25 10:42:09 UTC
first bad commit: [e5bb5c52aeaeb60c8592b004efd88c30242e03a1] add RenderContext to Window::PushPaintHelper, use Erase correctly
Comment 4 raal 2015-06-28 12:21:50 UTC
*** Bug 92393 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2015-07-03 16:57:44 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b010e4074e5d5ee3a3905f1351f04efafe937c2a

tdf#92241 fix crashes and rendering of symbol set previews

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2015-07-03 18:19:22 UTC
Fixed, also the following regressions: (1) crash when clicking on the Edit button, (2) the missing font preview in character table and its (3) fixed size (not only in the starmath Edit Symbols window, but the inserting special symbols dialog window had these problems).
Comment 7 László Németh 2015-07-03 18:23:20 UTC
> fixed size

Note: The special symbols dialog windows are resizeable, zooming the characters in the character table. This is very useful, but quite hidden feature.
Comment 8 Commit Notification 2015-07-04 16:19:28 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac7cc2b709469f1b88fe67dd8d069512ade6eb1c&h=libreoffice-5-0

tdf#92241 fix crashes and rendering of symbol set previews

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 09:14:23 UTC Comment hidden (obsolete)