tdf#92241 fix crashes and rendering of symbol set previews

Change-Id: I43397f2b0caa31c334f87acf11fc96df2e051ad8