include/vcl/ctrl.hxx
@@ -41,6 +41,8 @@ protected:
 
 private:
     bool                    mbHasControlFocus;
+    bool                    mbFont;
+    bool                    mbForeground;
     Link<>                  maGetFocusHdl;
     Link<>                  maLoseFocusHdl;
 
